--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@dicebear/avatars": "^4.5.4",
+    "@dicebear/avatars-bottts-sprites": "^4.5.4",
     "firebase": "^8.2.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
