--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.1.0",
     "@dicebear/avatars": "^4.5.4",
     "@dicebear/avatars-bottts-sprites": "^4.5.4",
+    "angular": "^1.8.2",
     "firebase": "^8.2.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
