profile, leaderboard work

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@angular/router": "~11.1.0",
     "@dicebear/avatars": "^4.5.4",
     "@dicebear/avatars-bottts-sprites": "^4.5.4",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "angular": "^1.8.2",
     "firebase": "^8.2.9",
     "rxjs": "~6.6.0",
