--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@dicebear/avatars-bottts-sprites": "^4.5.4",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "angular": "^1.8.2",
