changes http to https on trivia api call

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "(public) dist/Giphy",
+    "public": "dist/giphy",
     "ignore": [
       "firebase.json",
       "**/.*",
